--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
+    "exceljs": "^1.6.0",
     "express": "^4.16.3",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
