--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "exceljs": "^1.6.0",
     "express": "^4.16.3",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "url-parse": "^1.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
