--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.2",
     "exceljs": "^1.6.0",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "url-parse": "^1.4.3"
